--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "vaul-vue": "^0.2.1",
     "vee-validate": "^4.15.0",
     "vite": "6.0.11",
+    "vite-plugin-qrcode": "^0.2.4",
     "vue": "^3.5.13",
     "vue-sonner": "^1.3.0",
     "ziggy-js": "^2.5.1",
