--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
     "sentry/sentry-laravel": "^4.10",
     "spatie/laravel-sitemap": "^7.3",
     "symfony/mailer": "~7.1.0",
-    "tightenco/ziggy": "^2.0"
+    "tightenco/ziggy": "^2.0",
+    "tomatophp/filament-pwa": "^1.0"
   },
   "require-dev": {
     "barryvdh/laravel-ide-helper": "^3.2",
