--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@ai-sdk/vue": "^1.1.19",
+    "@headlessui/react": "^2.2.2",
+    "@heroicons/react": "^2.2.0",
     "@heroicons/vue": "^2.2.0",
     "@iconify/vue": "^4.3.0",
     "@inertiajs/vue3": "^2.0.4",
