Update DCCPhub branding and configuration
- Updated mix-manifest.json with new app.js hash.
- Changed HeroSection.vue button URL and GitHub link to reflect new project repository.
- Modified useSeoMetaTags.js for updated SEO metadata specific to DCCPhub.
- Updated WebLayout.vue with new GitHub and Twitter URLs.
- Adjusted Welcome.vue to reflect new GitHub repository and commented out PricingSection.
- Updated app.blade.php with new schema information for DCCPhub.
- Added filament-pwa.php configuration file for PWA settings.
- Created start-dccp-admin.sh script for production environment setup and server management.

--- a/composer.json
+++ b/composer.json
@@ -16,13 +16,16 @@
         "inertiajs/inertia-laravel": "^2.0",
         "laravel/cashier": "^15.5",
         "laravel/framework": "^11.9",
+        "laravel/horizon": "^5.33",
         "laravel/jetstream": "^5.3",
+        "laravel/nightwatch": "^1.10",
         "laravel/octane": "^2.5",
         "laravel/sanctum": "^4.0",
         "laravel/socialite": "^5.16",
         "laravel/tinker": "^2.9",
         "league/flysystem-aws-s3-v3": "^3.0",
         "pinkary-project/type-guard": "^0.1.0",
+        "predis/predis": "^3.0",
         "quix-labs/laravel-supabase-flysystem": "^1.0",
         "resend/resend-php": "^0.14.0",
         "sentry/sentry-laravel": "^4.10",
