--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.3",
+        "chrome-php/chrome": "^1.14",
         "cweagans/composer-patches": "*",
         "echolabsdev/prism": "^0.26.0",
         "filament/filament": "^3.2",
