feat: Implement notification system with real-time updates and web push support
- Added NotificationItem component for displaying individual notifications.
- Created NotificationModal component for detailed notification view.
- Developed useNotifications composable for managing notifications and fetching data from the server.
- Implemented usePusher composable for handling Pusher connections and events.
- Added useRealtimeNotifications composable to listen for real-time notification events.
- Created useWebPush composable for managing web push notifications and service worker registration.
- Introduced debug-pusher.js for testing Pusher environment variables and connection.
- Defined broadcast channels in channels.php for user-specific and faculty notifications.

--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "echolabsdev/prism": "^0.26.0",
         "filament/filament": "^3.2",
         "inertiajs/inertia-laravel": "^2.0",
+        "laravel-notification-channels/webpush": "^10.2",
         "laravel/cashier": "^15.5",
         "laravel/framework": "^11.9",
         "laravel/horizon": "^5.33",
@@ -27,6 +28,7 @@
         "league/flysystem-aws-s3-v3": "^3.0",
         "pinkary-project/type-guard": "^0.1.0",
         "predis/predis": "^3.0",
+        "pusher/pusher-php-server": "^7.2",
         "quix-labs/laravel-supabase-flysystem": "^1.0",
         "resend/resend-php": "^0.14.0",
         "sentry/sentry-laravel": "^4.10",
