--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "embla-carousel-vue": "^8.6.0",
     "lucide-vue-next": "^0.462.0",
     "postcss": "^8.5.6",
+    "pusher-js": "^8.4.0",
     "radix-vue": "^1.9.17",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^4.1.11",
