Add default CSS styles for Volet component including layout, typography, and interactive elements

--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,9 @@
         "laravel/socialite": "^5.16",
         "laravel/tinker": "^2.9",
         "league/flysystem-aws-s3-v3": "^3.29",
+        "mydnic/volet": "^2.1",
+        "mydnic/volet-feature-board": "^1.0",
+        "mydnic/volet-feedback-messages-filament-plugin": "^1.0",
         "pinkary-project/type-guard": "^0.1.0",
         "predis/predis": "^3.0",
         "pusher/pusher-php-server": "^7.2",
