fix: Update adaptive icon configuration for proper app drawer display
- Generate proper adaptive icon foreground sizes (108x108 to 432x432)
- Update adaptive icon background color to white (#FFFFFF)
- Fix Android app drawer icon display issue
- Maintain backward compatibility with legacy icons
- Update GitHub workflow to include adaptive icon note

--- a/.github/workflows/release-apk.yml
+++ b/.github/workflows/release-apk.yml
@@ -94,6 +94,7 @@ jobs:
             echo "Found committed APK: $APK_PATH"
             echo "Renamed to: $NEW_APK_NAME"
             echo "APK size: $APK_SIZE"
+            echo "Note: APK includes custom DCCP branding and adaptive icons"
           else
             echo "No committed APK found in releases/ directory"
             echo "Please build and commit an APK first using: ./scripts/build-apk-capacitor.sh"
