--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "lucide-vue-next": "^0.462.0",
     "postcss": "^8.5.6",
     "pusher-js": "^8.4.0",
+    "qrcode-vue3": "^1.7.1",
     "radix-vue": "^1.9.17",
     "reka-ui": "^2.4.1",
     "tailwind-merge": "^2.6.0",
