--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,7 @@
         "resend/resend-php": "^0.14.0",
         "sentry/sentry-laravel": "^4.10",
         "silviolleite/laravelpwa": "^2.0",
+        "spatie/laravel-permission": "^6.21",
         "spatie/laravel-sitemap": "^7.3",
         "symfony/mailer": "~7.1.0",
         "tightenco/ziggy": "^2.0",
